# smkrep-datamatrix-detector

./: .gitignore  CMakeLists.txt  README.md  detector.cpp
